ros2_ws/log/build_2024-10-23_22-11-00/drone_home/stderr.log
  File "/home/pi/ros2_ws/install/drone_home/lib/python3.12/site-packages/drone_home/imu_publisher.py", line 73
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop

